--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,13 @@
         android:allowBackup="true"
         android:icon="@drawable/galochka"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+
+
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".TestActivity" />
         <activity android:name=".ResultActivity" />
-
+        <activity android:name=".CheaterCabinetActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
